<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment"
    android:background="@color/base"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/field_btn_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_user"
            style="@style/profile"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:drawableTop="@drawable/man"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/btn_1" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_kontak"
            style="@style/profile"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:drawableTop="@drawable/contacts"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/btn_7"
            android:layout_marginLeft="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_findMe"
            style="@style/profile"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:drawableTop="@drawable/map"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/btn_8"
            android:layout_marginLeft="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_about"
            style="@style/profile"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:drawableTop="@drawable/information"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/btn_9"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <FrameLayout
            android:id="@+id/page_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
    </RelativeLayout>
</LinearLayout>