<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:background="@color/base">

    <LinearLayout
        android:id="@+id/homeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:src="@drawable/foto"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            style="@style/nama"
            android:textAlignment="center"
            android:layout_marginTop="4dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motivasi"
            style="@style/motivasi"
            android:textAlignment="center"
            android:layout_marginTop="4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="23dp"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile"
                android:layout_width="72dp"
                android:layout_height="57dp"
                style="@style/profile"
                android:drawableTop="@drawable/user"
                android:paddingTop="10dp"
                android:text="@string/btn_1"
                android:gravity="center"
                android:onClick="deskripsi"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_hobi"
                android:layout_width="72dp"
                android:layout_height="57dp"
                style="@style/profile"
                android:drawableTop="@drawable/hobi"
                android:paddingTop="10dp"
                android:text="@string/btn_2"
                android:gravity="center"
                android:layout_marginLeft="50dp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <FrameLayout
                android:id="@+id/page_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>